2012-04-07  Helmut Eller  <heller@common-lisp.net>

	Fix long lines.

	* swank.lisp:
	* slime.el:
	* ChangeLog:
	* swank-cmucl.lisp:
	* swank-lispworks.lisp:
	* contrib/ChangeLog
	* hyperspec.el
	* metering.lisp
	* swank-abcl.lisp
	* swank-allegro.lisp
	* swank-backend.lisp
	* swank-clisp.lisp
	* swank-corman.lisp
	* swank-ecl.lisp
	* swank-sbcl.lisp
	* swank-scl.lisp
	* swank-source-path-parser.lisp
	* xref.lisp

2012-04-06  Stas Boukarev  <stassats@gmail.com>

	* swank.lisp (interrupt-worker-thread): Interrupt the REPL thread if
	there are no threads found. Send Emacs an error message if no
	threads are found at all.

2012-03-30  Nikodemus Siivola  <nikodemus@random-state.net>

	* swank-sbcl.lisp (lisp-source-location): When processing a
	STEP-FORM-CONDITION, don't show the initial form from expansion of
	STEP. (Currently SBCL doesn't give the form at all, but when it
	does seeing it is distinctly useless.)

2012-03-26  Helmut Eller  <heller@common-lisp.net>

	* slime.el (utf-8-source): XEmacs has no set-buffer-multibyte.
	(slime-create-test-results-buffer): Set file-coding-system.

	* swank-lispworks.lisp (swank-compile-string): Don't include the
	source-string in the dspec::*location*.  As LW has the habbit to
	print the entire *location* on redefinition the source-string
	would causes troubles for the test case.

	* swank-sbcl.lisp (swank-compile-string): Use utf8.

	* swank-cmucl.lisp (swank-compile-file): Use external-format arg.

	* swank-ccl.lisp (swank-compile-string, compile-temp-file): Use
	utf8.

	* slime.el (utf-8-source): New test case.

2012-03-14  Paulo Madeira <acelent@gmail.com>

	Use Unix-EOL convention even on Windows.

	* swank-allegro.lisp (string-to-utf8, utf8-to-string): Use
	excl:crlf-base-ef.
	* swank-lispworks.lisp (string-to-utf8,  utf8-to-string): Use
	'(:utf-8 :eol-style :lf)

2012-03-06  Helmut Eller  <heller@common-lisp.net>

	* swank-ccl.lisp: If 'xref is not provided warn about it but
	continue.
